--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -93,7 +93,7 @@
                         </div>
                         <div class="text-center">
                             <p class="card__description">Curso Origami Basico</p>
-                            <a class="card__link" href="#">QUIERO MAS INFO!</a>
+                            <a class="card__link" href="./contacto.html">QUIERO MAS INFO!</a>
                         </div>
                     </article>
                 </div>
@@ -106,7 +106,7 @@
                         </div>
                         <div class="text-center">
                             <p class="card__description">Curso Paper Crafts 3D</p>
-                            <a class="card__link" href="#">QUIERO MAS INFO!</a>
+                            <a class="card__link" href="./contacto.html">QUIERO MAS INFO!</a>
                         </div>
                     </article>
                 </div>
@@ -119,7 +119,7 @@
                         </div>
                         <div class="text-center">
                             <p class="card__description">Curso Paper Crafts Basico</p>
-                            <a class="card__link" href="#">QUIERO MAS INFO!</a>
+                            <a class="card__link" href="./contacto.html">QUIERO MAS INFO!</a>
                         </div>
                     </article>
                 </div>
