--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <div class="pt-3 ps-5 mx-auto ">
                             <h2 class=" text-white font-monospace">CURSOS ON-LINE</h2>
                             <p class="modalidad font-monospace fst-italic">NUEVA MODALIDAD</p>
-                            <ul class="text-white">
+                            <ul class="mainLista text-white">
                                 <li>CLASES TEORICO / PRACTICAS</li>
                                 <li>VIDEOS PASO A PASO</li>
                                 <li>TEXTOS COMPLEMENTARIOS</li>
