--- a/index.html
+++ b/index.html
@@ -160,9 +160,8 @@
                 </div>
                 <div class="col-sm-12 col-md-4 p-3 text-center">
                     <p class="text-white">SEGUINOS EN REDES</p>
-                    <a class="footerIconInsta" href="#"><i class="fa-brands fa-instagram  ms-3"></i></a>
-                    <a class="footerIconFace" href="#"><i class="fa-brands fa-facebook  ms-3"></i></a>
-
+                    <a class="footerIconInsta" href="#"><i class="iconRedes fa-brands fa-instagram  ms-3"></i></a>
+                    <a class="footerIconFace" href="#"><i class="iconRedes fa-brands fa-facebook  ms-3"></i></a>
                 </div>
             </div>
         </div>
