--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -20,7 +20,7 @@
 
     <!-- Stylesheet  CSS -->
 
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../style-sass.css">
 
     <title>Shihen Web - Origami & Paper crafts - Home</title>
 </head>
@@ -151,8 +151,8 @@
                     </div>
                     <div class="col-sm-12 col-md-4 p-3 text-center">
                         <p class="text-white">SEGUINOS EN REDES</p>
-                        <a class="footerIconInsta" href="#"><i class="fa-brands fa-instagram  ms-3"></i></a>
-                        <a class="footerIconFace" href="#"><i class="fa-brands fa-facebook  ms-3"></i></a>
+                        <a class="footerIconInsta" href="#"><i class="iconRedes fa-brands fa-instagram  ms-3"></i></a>
+                        <a class="footerIconFace" href="#"><i class="iconRedes fa-brands fa-facebook  ms-3"></i></a>
 
                     </div>
                 </div>
