--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -111,7 +111,7 @@
         </section>
         <!-- Fin Listado cursos -->
         <!-- Video cursos -->
-        <section>
+        <section class="cursosSection">
             <div class="iframeCursos">
                 <iframe class="video m-5" width="500" height="300" src="https://www.youtube.com/embed/rmpyNatYvzE"
                     title="YouTube video player" frameborder="0"
