--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     </div>
                     <!-- Fin Parrafo inicial -->
                     <!-- Cursos e inscripcion -->
-                    <div class="col-sm-12 col-md-12 cursos">
+                    <div class="cursos col-sm-12 col-md-12">
                         <div class="pt-3 ps-5 mx-auto ">
                             <h2 class=" text-white font-monospace">CURSOS ON-LINE</h2>
                             <p class="modalidad font-monospace fst-italic">NUEVA MODALIDAD</p>
