--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -20,7 +20,7 @@
 
     <!-- Stylesheet  CSS -->
 
-    <link rel="stylesheet" href="../style-sass.css">
+    <link rel="stylesheet" href="../css/style-sass.css">
 
     <title>Shihen Web - Origami & Paper crafts - Home</title>
 </head>
