--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- Stylesheet  CSS -->
 
-    <link rel="stylesheet" href="./style-sass.css">
+    <link rel="stylesheet" href="./css/style-sass.css">
 
     <title>Shihen Web - Origami & Paper crafts - Home</title>
 </head>
@@ -148,9 +148,9 @@
             <div class="row">
                 <div class="col-sm-12 col-md-4 p-3  text-center">
                     <ul class="list-unstyled">
-                        <li>Lun a vier 9 a 18hs</li>
-                        <li>+39-123-4567-8900</li>
-                        <li>Cso.Francia 200, Torino, Italia</li>
+                        <li class="info-horarios">Lun a vier 9 a 18hs</li>
+                        <li class="info-telefono">+39-123-4567-8900</li>
+                        <li class="info-direccion">Cso.Francia 200, Torino, Italia</li>
                     </ul>
                 </div>
                 <div class="col-sm-12 col-md-4 p-3 text-center">
