Aplicacion de mixins y maps

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -140,9 +140,9 @@
             <div class="row">
                 <div class="col-sm-12 col-md-4 p-3  text-center">
                     <ul class="list-unstyled">
-                        <li>Lun a vier 9 a 18hs</li>
-                        <li>+39-123-4567-8900</li>
-                        <li>Cso.Francia 200, Torino, Italia</li>
+                        <li class="info-horarios">Lun a vier 9 a 18hs</li>
+                        <li class="info-telefono">+39-123-4567-8900</li>
+                        <li class="info-direccion">Cso.Francia 200, Torino, Italia</li>
                     </ul>
                 </div>
                 <div class="col-sm-12 col-md-4 p-3 text-center">
