--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -97,12 +97,17 @@
             <!-- Listado cursos -->
             <div>
                 <h2 class="font-monospace text-center fs-1 pt-5">TODOS LOS CURSOS</h2>
-                <p class="text-dark text-center fs-4">Tecnica Origami - BASICO</p>
-                <p class="text-dark text-center fs-4">Tecnica Origami - AVANZADO</p>
+                <p class="text-dark text-center fs-4">Tecnica Origami - BASICO <a href="./contacto.html"
+                        class="link-Origami-Basico">INSCRIBITE!!</a> </p>
+                <p class="text-dark text-center fs-4">Tecnica Origami - AVANZADO <a href="./contacto.html"
+                        class="link-Origami-Avanzado">INSCRIBITE!!</a></p>
                 <br>
-                <p class="text-dark text-center fs-4">Paper crafts BASICO</p>
-                <p class="text-dark text-center fs-4">Paper crafts 3D</p>
-                <p class="text-dark text-center fs-4">Paper crafts ESPECIALES</p>
+                <p class="text-dark text-center fs-4">Paper Crafts BASICO <a href="./contacto.html"
+                        class="link-Paper-Crafts-Basico">INSCRIBITE!!</a></p>
+                <p class="text-dark text-center fs-4">Paper Crafts 3D <a href="./contacto.html"
+                        class="link-Paper-Crafts-3D">INSCRIBITE!!</a></p>
+                <p class="text-dark text-center fs-4">Paper crafts ESPECIALES <a href="./contacto.html"
+                        class="link-Paper-Crafts-Especiales">INSCRIBITE!!</a></p>
                 <br>
                 <p class="contactoCursos p-3 mb-2 bg-dark text-white text-center text">Para mas info o inscripciones
                     dejanos tus datos en <a href="./contacto.html">CONTACTO</a> y
@@ -138,9 +143,9 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-4 p-3  text-center">
                         <ul class="list-unstyled">
-                            <li>Lun a vier 9 a 18hs</li>
-                            <li>+39-123-4567-8900</li>
-                            <li>Cso.Francia 200, Torino, Italia</li>
+                            <li class="info-horarios">Lun a vier 9 a 18hs</li>
+                            <li class="info-telefono">+39-123-4567-8900</li>
+                            <li class="info-direccion">Cso.Francia 200, Torino, Italia</li>
                         </ul>
                     </div>
                     <div class="col-sm-12 col-md-4 p-3 text-center">
