--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -85,7 +85,7 @@
             <div class="row g-5">
 
                 <!-- card 1 -->
-                <div class="col-12 col-md-6 col-lg-4 cards">
+                <div class="col-12 col-md-6 col-lg-4 cards tarjeta-uno">
                     <article class="card p-3">
                         <div class="card__header">
                             <img src="../imagenes/papercraft22.jpg" class="img-fluid" height="250px"
@@ -98,7 +98,7 @@
                     </article>
                 </div>
                 <!-- card 2 -->
-                <div class="col-12 col-md-6 col-lg-4 cards">
+                <div class="col-12 col-md-6 col-lg-4 cards tarjeta-dos">
                     <article class="card p-3">
                         <div class="card__header">
                             <img src="../imagenes/papercraft3.jpg" class="img-fluid" height="250px"
@@ -111,7 +111,7 @@
                     </article>
                 </div>
                 <!-- card 3 -->
-                <div class="col-12 col-md-6 col-lg-4 cards">
+                <div class="col-12 col-md-6 col-lg-4 cards tarjeta-tres">
                     <article class="card p-3">
                         <div class="card__header">
                             <img src="../imagenes/papercraft33.jpg" class="img-fluid" height="250px"
@@ -211,9 +211,9 @@
             <div class="row">
                 <div class="col-sm-12 col-md-4 p-3  text-center">
                     <ul class="list-unstyled">
-                        <li>Lun a vier 9 a 18hs</li>
-                        <li>+39-123-4567-8900</li>
-                        <li>Cso.Francia 200, Torino, Italia</li>
+                        <li class="info-horarios">Lun a vier 9 a 18hs</li>
+                        <li class="info-telefono">+39-123-4567-8900</li>
+                        <li class="info-direccion">Cso.Francia 200, Torino, Italia</li>
                     </ul>
                 </div>
                 <div class="col-sm-12 col-md-4 p-3 text-center">
