--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords"
+        content="origami, arte en papel, arte, artesanias, cursos, talleres, workshops, papel, paper crafts, manualidades, diy, moldeado en papel, figuras, formas" />
+    <meta name="description"
+        content="Aprende y relajate con nuestros cursos de Origami y manualidades en papel; para todos los niveles y edades. Crea infinitas formas y colores. Libera tu imaginacion y liberate del estres. Inscribite y compartilo con tus amigos!!">
     <!-- Icons-->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="icon" href="./imagenes/favicon.jpg">
 
     <!-- Bootstrap -->
 
@@ -22,7 +27,7 @@
 
     <link rel="stylesheet" href="./css/style-sass.css">
 
-    <title>Shihen Web - Origami & Paper crafts - Home</title>
+    <title>Shihen-Cursos Origami-Arte en papel-HOME-CURSOS-DIY-MANUALIDADES</title>
 </head>
 
 <body>
@@ -65,7 +70,7 @@
             <section class="bg-dark text-white">
                 <div class="container-fluid py-3">
                     <h1 class="display-1">Shihen</h1>
-                    <h3 class="slogan font-monospace fs-4">Origami & Paper Crafts - Arte anti-stress</h3>
+                    <h2 class="slogan font-monospace fs-4">Origami & Paper Crafts - Arte anti-stress</h2>
                 </div>
             </section>
             <!-- Fin Marca & slogan -->
