--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords"
+        content="cursos, talleres, workshops, nivel basico, nivel avanzado, tecnicas, origami, arte en papel, arte, artesanias, papel, paper crafts, manualidades, diy, moldeado en papel, figuras, formas" />
+    <meta name="description"
+        content="Cursos basico-avanzado-todas las edades. Modalidad online y presencial. Aprende y relajate con nuestros cursos de Origami y manualidades en papel; para todos los niveles y edades. Crea infinitas formas y colores. Libera tu imaginacion y liberate del estres. Inscribite y compartilo con tus amigos!" />
 
     <!-- Icons-->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="icon" href="../imagenes/favicon.jpg">
 
     <!-- Bootstrap -->
 
@@ -22,7 +28,7 @@
 
     <link rel="stylesheet" href="../css/style-sass.css">
 
-    <title>Shihen Web - Origami & Paper crafts - Home</title>
+    <title>Shihen-Cursos Origami-Arte en papel-CURSOS-INSCRIPCIONES-ONLINE</title>
 </head>
 
 <body>
@@ -65,7 +71,7 @@
             <section class="bg-dark text-white">
                 <div class="container-fluid py-3">
                     <h1 class="display-1">Shihen</h1>
-                    <h3 class="slogan font-monospace fs-4">Origami & Paper Crafts - Arte anti-stress</h3>
+                    <h2 class="slogan font-monospace fs-4">Origami & Paper Crafts - Arte anti-stress</h2>
                 </div>
             </section>
             <!-- Fin Marca & slogan -->
@@ -125,7 +131,7 @@
             </div>
 
             <div>
-                <h2 class="font-monospace text-center pt-5">ALGO DE TODO LO QUE VAS A PODER APRENDER</h2>
+                <h3 class="font-monospace text-center pt-5">ALGO DE TODO LO QUE VAS A PODER APRENDER</h3>
                 <p class="font-monospace fw-semibold fs-5 text-black text-center">Videos nuevos todos los viernes</p>
                 <p class="font-monospace fw-semibold fs-5 text-black text-center">Separados por nivel y contenido
                     tematico
