--- a/pages/insumos.html
+++ b/pages/insumos.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords"
+        content="comprar, pedidos, envios, insumos, productos, papel, papel importado, papel para origami, laminas, origami, arte en papel, arte, artesanias, cursos, talleres, workshops, papel, paper crafts, manualidades, diy, moldeado en papel" />
+    <meta name="description"
+        content="Productos e insumos para origami y manualidades en papel. Laminas y papel importado. Hace tu pedido. Todos los medios de pago. Envios gratis. Aprende y relajate con nuestros cursos; todos los niveles y edades. Crea infinitas formas y colores. Libera tu imaginacion y liberate del estres. Inscribite!" />
 
     <!-- Icons-->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="icon" href="../imagenes/favicon.jpg">
 
     <!-- Bootstrap -->
 
@@ -23,7 +29,7 @@
 
     <link rel="stylesheet" href="../css/style-sass.css">
 
-    <title>Shihen Web - Origami & Paper crafts - Home</title>
+    <title>Shihen-Cursos Origami-Arte en papel-INSUMOS-PRODUCTOS-PAPEL-LAMINAS</title>
 </head>
 
 <body>
@@ -66,7 +72,7 @@
             <section class="bg-dark text-white">
                 <div class="container-fluid py-3">
                     <h1 class="display-1">Shihen</h1>
-                    <h3 class="slogan font-monospace fs-4">Origami & Paper Crafts - Arte anti-stress</h3>
+                    <h2 class="slogan font-monospace fs-4">Origami & Paper Crafts - Arte anti-stress</h2>
                 </div>
             </section>
             <!-- Fin Marca & slogan -->
