--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <link rel="stylesheet" href="./css/style-sass.css">
 
-    <title>Shihen-Cursos Origami-Arte en papel-HOME-CURSOS-DIY-MANUALIDADES</title>
+    <title>Shihen|Cursos y clases|Origami|Arte en papel|Manualidades|DIY - HOME</title>
 </head>
 
 <body>
