--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -29,7 +29,7 @@
 
     <link rel="stylesheet" href="../css/style-sass.css">
 
-    <title>Shihen-Cursos Origami-Arte en papel-CONTACTO-CONSULTAS-COMENTARIOS</title>
+    <title>Shihen|Cursos y clases|Origami|Arte en papel|Contactate|Info|CONTACTO</title>
 </head>
 
 <body>
