--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -28,7 +28,7 @@
 
     <link rel="stylesheet" href="../css/style-sass.css">
 
-    <title>Shihen-Cursos Origami-Arte en papel-CURSOS-INSCRIPCIONES-ONLINE</title>
+    <title>Shihen|Cursos y clases|Origami|Arte en papel|Inscripcion|Online|CURSOS</title>
 </head>
 
 <body>
