--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -29,7 +29,7 @@
 
     <link rel="stylesheet" href="../css/style-sass.css">
 
-    <title>Shihen-Cursos Origami-Arte en papel-GALERIA-FOTOS-IMAGENES-TRABAJOS</title>
+    <title>Shihen|Cursos y clases|Origami|Arte en papel|Imagenes|Trabajos|GALERIA</title>
 </head>
 
 <body>
@@ -95,7 +95,7 @@
                     <article class="card p-3">
                         <div class="card__header">
                             <img src="../imagenes/papercraft22.jpg" class="img-fluid" height="250px"
-                                alt="imagen curso" />
+                                alt="Imagen colorida de alumnos trabajando en clase" />
                         </div>
                         <div class="text-center">
                             <p class="card__description">Curso Origami Basico</p>
@@ -108,7 +108,7 @@
                     <article class="card p-3">
                         <div class="card__header">
                             <img src="../imagenes/papercraft3.jpg" class="img-fluid" height="250px"
-                                alt="imagen curso" />
+                                alt="Imagen colorida de alumnos trabajando en clase" />
                         </div>
                         <div class="text-center">
                             <p class="card__description">Curso Paper Crafts 3D</p>
@@ -121,7 +121,7 @@
                     <article class="card p-3">
                         <div class="card__header">
                             <img src="../imagenes/papercraft33.jpg" class="img-fluid" height="250px"
-                                alt="imagen curso" />
+                                alt="Imagen colorida de alumnos trabajando en clase" />
                         </div>
                         <div class="text-center">
                             <p class="card__description">Curso Paper Crafts Basico</p>
@@ -142,8 +142,8 @@
                 <div class="col-12 col-md-6 col-lg-4 cards">
                     <article class="card p-3">
                         <div class="card__header">
-                            <img src="../imagenes/origamigift.jpg" class="img-fluid" height="250px alt=" imagen
-                                curso" />
+                            <img src="../imagenes/origamigift.jpg" class="img-fluid" height="250px"
+                                alt="Imagen color beige de figura de estrella hecha en papel" />
                         </div>
                         <h3 class="card__description">Origami 3D</h3>
                         <p>Profesora Maia Passarelli </p>
@@ -153,7 +153,8 @@
                 <div class="col-12 col-md-6 col-lg-4 cards">
                     <article class="card p-3">
                         <div class="card__header">
-                            <img src="../imagenes/origami3d.jpg" class="img-fluid" height="250px alt=" imagen curso" />
+                            <img src="../imagenes/origami3d.jpg" class="img-fluid" height="250px"
+                                alt="Imagen de letra pop up color rojo saliendo de un libro" />
                         </div>
                         <h3 class="card__description">Tecnica Pop Up</h3>
                         <p>Profesor Fernando Andres </p>
@@ -163,8 +164,8 @@
                 <div class="col-12 col-md-6 col-lg-4 cards">
                     <article class="card p-3">
                         <div class="card__header">
-                            <img src="../imagenes/origamicasita.jpg" class="img-fluid" height="250px alt=" imagen
-                                curso" />
+                            <img src="../imagenes/origamicasita.jpg" class="img-fluid" height="250px"
+                                alt="Imagen de guirnalda de casitas blancas de papel" />
                         </div>
                         <h3 class="card__description">Paper Crafts 3D</h3>
                         <p>Profesora Agustina Campatelli </p>
@@ -174,8 +175,8 @@
                 <div class="col-12 col-md-6 col-lg-4 cards">
                     <article class="card p-3">
                         <div class="card__header">
-                            <img src="../imagenes/origamicora.jpg" class="img-fluid" height="250px alt=" imagen
-                                curso" />
+                            <img src="../imagenes/origamicora.jpg" class="img-fluid" height="250px"
+                                alt="Imagen de guirnalda de corazones rojos y rosas de papel" />
                         </div>
                         <h3 class="card__description">Tecnica Kirigami</h3>
                         <p>Profesora Noelia Ochoa </p>
@@ -185,8 +186,8 @@
                 <div class="col-12 col-md-6 col-lg-4 cards">
                     <article class="card p-3">
                         <div class="card__header">
-                            <img src="../imagenes/origamipensador.jpg" class="img-fluid" height="250px alt=" imagen
-                                curso" />
+                            <img src="../imagenes/origamipensador.jpg" class="img-fluid" height="250px"
+                                alt="Imagen en escala de grises de figura del pensador hecha en papel" />
                         </div>
                         <h3 class="card__description">Master 3D</h3>
                         <p>Profesora Maia Passarelli </p>
@@ -196,8 +197,8 @@
                 <div class="col-12 col-md-6 col-lg-4 cards">
                     <article class="card p-3">
                         <div class="card__header">
-                            <img src="../imagenes/origamiblanco.jpg" class="img-fluid" height="250px alt=" imagen
-                                curso" />
+                            <img src="../imagenes/origamiblanco.jpg" class="img-fluid" height="250px"
+                                alt="Imagen de grulla blanca de papel" />
                         </div>
                         <h3 class="card__description"> Origami </h3>
                         <p>Profesora Mabel Sarita </p>
