--- a/pages/insumos.html
+++ b/pages/insumos.html
@@ -29,7 +29,7 @@
 
     <link rel="stylesheet" href="../css/style-sass.css">
 
-    <title>Shihen-Cursos Origami-Arte en papel-INSUMOS-PRODUCTOS-PAPEL-LAMINAS</title>
+    <title>Shihen|Cursos y clases|Origami|Arte en papel|Compras|Tienda|INSUMOS</title>
 </head>
 
 <body>
