--- a/pages/insumos.html
+++ b/pages/insumos.html
@@ -84,71 +84,77 @@
     <!-- Comienzo main -->
 
     <main>
-        <!-- Lista de precios -->
-        <section class="listaPrecios pt-5">
-            <div class="listaPrecios__tabla p-3">
-                <table>
-                    <thead>
-                        <tr>
-                            <th class="font-monospace fs-4">PRODUCTOS</th>
-                            <th class="font-monospace fs-4">PRECIO</th>
-                        </tr>
-                    <tbody>
-                        <tr>
-                            <td>Hojas origami / Papel Japones</td>
-                            <td>$ 100</td>
-                        </tr>
-                        <tr>
-                            <td>Hojas origami / Papel doble cara</td>
-                            <td>$ 80</td>
-                        </tr>
-                        <tr>
-                            <td>Hojas origami / Papel doble cara estamp.</td>
-                            <td>$ 100</td>
-                        </tr>
-                        <tr>
-                            <td>Laminas Sakura</td>
-                            <td>$ 150</td>
-                        </tr>
-                        <tr>
-                            <td>Laminas Kimono</td>
-                            <td>$ 150</td>
-                        </tr>
-                        <tr>
-                            <td>Laminas Kyoto</td>
-                            <td>$ 150</td>
-                        </tr>
-                        <tr>
-                            <td>Carta 100gs (colores)</td>
-                            <td>$ 50</td>
-                        </tr>
-                        <tr>
-                            <td>Carta 100gs (blanco/negro)</td>
-                            <td>$ 50</td>
-                        </tr>
-                        <tr>
-                            <td>Kit Origami / Dreams pastel</td>
-                            <td>$ 200</td>
-                        </tr>
-                        <tr>
-                            <td>Kit Origami / Dreams neon</td>
-                            <td>$ 200</td>
-                        </tr>
-                        <tr>
-                            <td>Kit Origami / Dreams metal</td>
-                            <td>$ 200</td>
-                        </tr>
-                        <tr>
-                            <td>Lapiceras MUJI</td>
-                            <td>$ 15</td>
-                        </tr>
-                        <tr>
-                            <td>Lapiceras MUJI / Pack x 6un</td>
-                            <td>$ 80</td>
-                        </tr>
-                    </tbody>
-                    </thead>
-                </table>
+        <!-- Comienzo Lista de precios -->
+        <section class="container">
+            <div class="row">
+                <div class="col">
+
+                    <table class="table ">
+                        <thead>
+                            <tr>
+                                <th class="table-success table-group-divider table-bordered font-monospace fs-4">
+                                    PRODUCTOS</th>
+                                <th class="table-success table-group-divider table-bordered font-monospace fs-4">PRECIO
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Hojas origami / Papel Japones</td>
+                                <td>$ 100</td>
+                            </tr>
+                            <tr>
+                                <td>Hojas origami / Papel doble cara</td>
+                                <td>$ 80</td>
+                            </tr>
+                            <tr>
+                                <td>Hojas origami / Papel doble cara estamp.</td>
+                                <td>$ 100</td>
+                            </tr>
+                            <tr>
+                                <td>Laminas Sakura</td>
+                                <td>$ 150</td>
+                            </tr>
+                            <tr>
+                                <td>Laminas Kimono</td>
+                                <td>$ 150</td>
+                            </tr>
+                            <tr>
+                                <td>Laminas Kyoto</td>
+                                <td>$ 150</td>
+                            </tr>
+                            <tr>
+                                <td>Carta 100gs (colores)</td>
+                                <td>$ 50</td>
+                            </tr>
+                            <tr>
+                                <td>Carta 100gs (blanco/negro)</td>
+                                <td>$ 50</td>
+                            </tr>
+                            <tr>
+                                <td>Kit Origami / Dreams pastel</td>
+                                <td>$ 200</td>
+                            </tr>
+                            <tr>
+                                <td>Kit Origami / Dreams neon</td>
+                                <td>$ 200</td>
+                            </tr>
+                            <tr>
+                                <td>Kit Origami / Dreams metal</td>
+                                <td>$ 200</td>
+                            </tr>
+                            <tr>
+                                <td>Lapiceras MUJI</td>
+                                <td>$ 15</td>
+                            </tr>
+                            <tr>
+                                <td>Lapiceras MUJI / Pack x 6un</td>
+                                <td>$ 80</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                </div>
             </div>
         </section>
         <!-- Fin Lista de precios -->
