--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                     </div>
                     <!-- Fin Parrafo inicial -->
                     <!-- Cursos e inscripcion -->
-                    <div class="cursos col-sm-12 col-md-12">
-                        <div class="pt-3 ps-5 mx-auto ">
+                    <div class="cursos col-sm-12 col-md-12 text-center">
+                        <div class="pt-5 ps-3 mx-auto">
                             <h2 class=" text-white font-monospace">CURSOS ON-LINE</h2>
                             <p class="modalidad font-monospace fst-italic">NUEVA MODALIDAD</p>
                             <ul class="mainLista text-white">
@@ -166,7 +166,7 @@
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <div class="col-sm-12 col-md-4 p-3 text-center">
-                    <p class="text-white">SEGUINOS EN REDES</p>
+                    <h5 class="redesFooter">SEGUINOS EN REDES</h5>
                     <a class="footerIconInsta" href="#"><i class="iconRedes fa-brands fa-instagram  ms-3"></i></a>
                     <a class="footerIconFace" href="#"><i class="iconRedes fa-brands fa-facebook  ms-3"></i></a>
                 </div>
