--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -86,91 +86,109 @@
 
         <section>
             <!-- Parrafo inicial -->
-            <div>
-                <p class="text-dark text-center pt-4 mx-5">¿Lo bueno de aprender origami? Solo necesitas papel, por
+            <div class="parrafoCursos">
+                <h3 class="fw-light text-end fs-4 pt-5 mx-5">¿Lo bueno de aprender origami? Solo necesitas papel, por
                     lo que
                     cualquier
                     lugar es perfecto para practicar. Además, las formas que podés
-                    conseguir son infinitas.</p>
-                <p class="text-dark text-center  mx-5">¿Ya mencioné que el origami desarrolla la creatividad y la
+                    conseguir son infinitas.</h3>
+                <h3 class="fw-light text-end fs-4  mb-5 mx-5">¿Ya mencioné que el origami desarrolla la creatividad y la
                     imaginación?
                     Mientras que los pequeños
                     pueden empezar con las figuras básicas y más sencillas, un adulto puede crear espectaculares
                     figuras
-                    para decorar o adornar cualquier espacio.</p>
+                    para decorar o adornar cualquier espacio.</h3>
             </div>
             <!-- Fin Parrafo inicial -->
+
             <!-- Listado cursos -->
             <div>
-                <h2 class="font-monospace text-center fs-1 pt-5">TODOS LOS CURSOS</h2>
-                <p class="text-dark text-center fs-4">Tecnica Origami - BASICO <a href="./contacto.html"
-                        class="link-Origami-Basico">INSCRIBITE!!</a> </p>
-                <p class="text-dark text-center fs-4">Tecnica Origami - AVANZADO <a href="./contacto.html"
-                        class="link-Origami-Avanzado">INSCRIBITE!!</a></p>
-                <br>
-                <p class="text-dark text-center fs-4">Paper Crafts BASICO <a href="./contacto.html"
-                        class="link-Paper-Crafts-Basico">INSCRIBITE!!</a></p>
-                <p class="text-dark text-center fs-4">Paper Crafts 3D <a href="./contacto.html"
-                        class="link-Paper-Crafts-3D">INSCRIBITE!!</a></p>
-                <p class="text-dark text-center fs-4">Paper crafts ESPECIALES <a href="./contacto.html"
-                        class="link-Paper-Crafts-Especiales">INSCRIBITE!!</a></p>
-                <br>
-                <p class="contactoCursos p-3 mb-2 bg-dark text-white text-center text">Para mas info o inscripciones
-                    dejanos tus datos en <a href="./contacto.html">CONTACTO</a> y
-                    nos comunicamos con vos.</p>
+                <h2 class="text-start fw-semibold display-4 ms-5 pt-5 pb-4"> CURSOS
+                </h2>
+                <ul class="display-5 text-center list-group-flush">
+                    <li class="list-group-item text-start ms-5"><a href="./contacto.html"
+                            class="link-Origami-Basico inscribite me-5 fw-semibold">INSCRIBITE!!</a>Tecnica
+                        Origami -
+                        BASICO
+                    </li>
+                    <li class="list-group-item text-start ms-5"> <a href="./contacto.html"
+                            class="link-Origami-Avanzado inscribite me-5 fw-semibold">INSCRIBITE!!</a>Tecnica Origami -
+                        AVANZADO
+                    </li>
+                    <li class="list-group-item text-start ms-5"> <a href="./contacto.html"
+                            class="link-Paper-Crafts-Basico inscribite me-5 fw-semibold">INSCRIBITE!!</a>Paper Crafts
+                        BASICO </li>
+                    <li class="list-group-item text-start ms-5"><a href="./contacto.html"
+                            class="link-Paper-Crafts-3D inscribite me-5 fw-semibold">INSCRIBITE!!</a>Paper Crafts 3D
+                    </li>
+                    <li class="list-group-item text-start ms-5 mb-5"><a href="./contacto.html"
+                            class="link-Paper-Crafts-Especiales inscribite me-5 fw-semibold">INSCRIBITE!!</a>Paper
+                        crafts ESPECIALES
+                    </li>
+                </ul>
             </div>
-        </section>
-        <!-- Fin Listado cursos -->
-        <!-- Video cursos -->
-        <section class="cursosSection">
-            <div class="iframeCursos">
-                <iframe class="video m-5" width="500" height="300" src="https://www.youtube.com/embed/rmpyNatYvzE"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen> </iframe>
-            </div>
+            <!-- Fin Listado cursos -->
 
             <div>
-                <h3 class="font-monospace text-center pt-5">ALGO DE TODO LO QUE VAS A PODER APRENDER</h3>
-                <p class="font-monospace fw-semibold fs-5 text-black text-center">Videos nuevos todos los viernes</p>
-                <p class="font-monospace fw-semibold fs-5 text-black text-center">Separados por nivel y contenido
-                    tematico
-                </p>
+                <h3 class="contactoCursos fs-5 p-3 mb-2 bg-dark text-white text-center">Para mas info o inscripciones
+                    dejanos tus datos en <a href="./contacto.html">CONTACTO</a> y
+                    nos comunicamos con vos.</h3>
             </div>
-        </section>
-        <!-- Fin Video cursos -->
 
-        <!-- Fin main -->
+            <!-- Video cursos -->
+            <section class="cursosSection">
+                <h3 class="text-center fw-light fs-1 ms-5 me-5 mt-5">ALGO DE TODO LO QUE VAS A
+                    PODER APRENDER</h3>
 
-        <!-- Comienzo footer -->
+                <div class="iframeCursos">
+                    <iframe class="video m-5" width="500" height="300" src="https://www.youtube.com/embed/rmpyNatYvzE"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen> </iframe>
+                </div>
 
-        <footer class="mt-5 bg-dark text-white">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 col-md-4 p-3  text-center">
-                        <ul class="list-unstyled">
-                            <li class="info-horarios">Lun a vier 9 a 18hs</li>
-                            <li class="info-telefono">+39-123-4567-8900</li>
-                            <li class="info-direccion">Cso.Francia 200, Torino, Italia</li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-12 col-md-4 p-3 text-center">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2817.488168432569!2d7.634623514825058!3d45.07589296729147!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47886cf396194ddb%3A0xefbea8bfeaf6b994!2sCorso%20Francia%2C%20200%2C%2010145%20Torino%20TO!5e0!3m2!1ses!2sit!4v1654272400085!5m2!1ses!2sit"
-                            width="200" height="100" style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade" class="footerIframe"></iframe>
-                    </div>
-                    <div class="col-sm-12 col-md-4 p-3 text-center">
-                        <p class="text-white">SEGUINOS EN REDES</p>
-                        <a class="footerIconInsta" href="#"><i class="iconRedes fa-brands fa-instagram  ms-3"></i></a>
-                        <a class="footerIconFace" href="#"><i class="iconRedes fa-brands fa-facebook  ms-3"></i></a>
+                <div>
+                    <h4 class="text-center me-5 ms-5 fs-3 fw-light fs-5">Videos nuevos todos los viernes
+                    </h4>
+                    <h4 class="text-center me-5 ms-5 fs-3 fw-light fs-5 mb-5">Separados por nivel y contenido
+                        tematico
+                    </h4>
+                </div>
+            </section>
+            <!-- Fin Video cursos -->
 
+            <!-- Fin main -->
+
+            <!-- Comienzo footer -->
+
+            <footer class="mt-5 bg-dark text-white">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-12 col-md-4 p-3  text-center">
+                            <ul class="list-unstyled">
+                                <li class="info-horarios">Lun a vier 9 a 18hs</li>
+                                <li class="info-telefono">+39-123-4567-8900</li>
+                                <li class="info-direccion">Cso.Francia 200, Torino, Italia</li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-12 col-md-4 p-3 text-center">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2817.488168432569!2d7.634623514825058!3d45.07589296729147!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47886cf396194ddb%3A0xefbea8bfeaf6b994!2sCorso%20Francia%2C%20200%2C%2010145%20Torino%20TO!5e0!3m2!1ses!2sit!4v1654272400085!5m2!1ses!2sit"
+                                width="200" height="100" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade" class="footerIframe"></iframe>
+                        </div>
+                        <div class="col-sm-12 col-md-4 p-3 text-center">
+                            <h5 class="redesFooter">SEGUINOS EN REDES</h5>
+                            <a class="footerIconInsta" href="#"><i
+                                    class="iconRedes fa-brands fa-instagram  ms-3"></i></a>
+                            <a class="footerIconFace" href="#"><i class="iconRedes fa-brands fa-facebook  ms-3"></i></a>
+
+                        </div>
                     </div>
                 </div>
-            </div>
-        </footer>
+            </footer>
 
-        <!-- Fin footer -->
+            <!-- Fin footer -->
 </body>
 
 </html>
