--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -86,7 +86,7 @@
     <main>
         <!-- Seccion alumnos -->
         <section class="container">
-            <h2 class="font-monospace fs-2 pt-5 mb-4 text-center">Nuestros Alumnos</h2>
+            <h2 class="fs-1 pt-5 mb-4 text-center">Nuestros Alumnos</h2>
 
             <div class="row g-5">
 
@@ -134,7 +134,7 @@
         <!-- Fin Seccion alumnos -->
         <!-- Seccion trabajos -->
         <section class="container">
-            <h2 class="font-monospace fs-2 pt-5 mb-4 text-center">Nuestro Trabajo</h2>
+            <h2 class="fs-1 pt-5 mb-5 mt-5 text-center">Nuestro Trabajo</h2>
 
             <div class="row g-5">
 
@@ -230,7 +230,7 @@
                         referrerpolicy="no-referrer-when-downgrade" class="footerIframe"></iframe>
                 </div>
                 <div class="col-sm-12 col-md-4 p-3 text-center">
-                    <p class="text-white">SEGUINOS EN REDES</p>
+                    <h5 class="redesFooter">SEGUINOS EN REDES</h5>
                     <a class="footerIconInsta" href="#"><i class="iconRedes fa-brands fa-instagram  ms-3"></i></a>
                     <a class="footerIconFace" href="#"><i class="iconRedes fa-brands fa-facebook  ms-3"></i></a>
                 </div>
