--- a/pages/insumos.html
+++ b/pages/insumos.html
@@ -85,16 +85,16 @@
 
     <main>
         <!-- Comienzo Lista de precios -->
-        <section class="container">
+        <section class="container mt-5 mb-5">
             <div class="row">
                 <div class="col">
 
-                    <table class="table ">
+                    <table class="table">
                         <thead>
                             <tr>
-                                <th class="table-success table-group-divider table-bordered font-monospace fs-4">
+                                <th class="table-success table-group-divider table-bordered fs-4">
                                     PRODUCTOS</th>
-                                <th class="table-success table-group-divider table-bordered font-monospace fs-4">PRECIO
+                                <th class="table-success table-group-divider table-bordered fs-4">PRECIO
                                 </th>
                             </tr>
                         </thead>
@@ -160,13 +160,13 @@
         <!-- Fin Lista de precios -->
         <!-- Condiciones -->
         <div class="text-center pt-5">
-            <h3 class="font-monospace fs-3 bg-success p-2 text-dark bg-opacity-25">ENVIOS</h3>
-            <p>Horario de entrega 9 a 18hs</p>
-            <p>Costo sin cargo para alumnos</p>
-            <h3 class="font-monospace fs-3 bg-success p-2 text-dark bg-opacity-25">MEDIOS DE PAGO</h3>
-            <p>Todos los medios habilitados</p>
-            <h3 class="font-monospace fs-3 bg-success p-2 text-dark bg-opacity-25">CAMBIOS / DEVOLUCIONES</h3>
-            <p>Tenes hasta 10 dias habiles a partir de la fecha de compra</p>
+            <h3 class="fs-3 bg-success p-2 text-dark bg-opacity-25">ENVIOS</h3>
+            <p class="textoInsumos">Horario de entrega 9 a 18hs</p>
+            <p class="textoInsumos">Costo sin cargo para alumnos</p>
+            <h3 class="fs-3 bg-success p-2 text-dark bg-opacity-25">MEDIOS DE PAGO</h3>
+            <p class="textoInsumos">Todos los medios habilitados</p>
+            <h3 class="fs-3 bg-success p-2 text-dark bg-opacity-25">CAMBIOS / DEVOLUCIONES</h3>
+            <p class="textoInsumos">Tenes hasta 10 dias habiles a partir de la fecha de compra</p>
         </div>
         <!-- Fin Condiciones -->
     </main>
@@ -192,7 +192,7 @@
                         referrerpolicy="no-referrer-when-downgrade" class="footerIframe"></iframe>
                 </div>
                 <div class="col-sm-12 col-md-4 p-3 text-center">
-                    <p class="text-white">SEGUINOS EN REDES</p>
+                    <h5 class="redesFooter">SEGUINOS EN REDES</h5>
                     <a class="footerIconInsta" href="#"><i class="iconRedes fa-brands fa-instagram  ms-3"></i></a>
                     <a class="footerIconFace" href="#"><i class="iconRedes fa-brands fa-facebook  ms-3"></i></a>
 
