--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -86,7 +86,7 @@
     <main>
 
         <section>
-            <h2 class="font-monospace fs-2 bg-success p-2 text-dark bg-opacity-25 text-center mt-5">
+            <h2 class="fs-2 bg-success p-2 text-dark bg-opacity-25 text-center mt-5">
                 CONTACTANOS</h2>
             <p class="p-3 mb-2 bg-transparent text-dark text-center">
                 Completa el formulario y te daremos feedback a la brevedad!!</p>
@@ -97,22 +97,19 @@
 
                     <div>
                         <div class="input-group flex-nowrap text-center">
-                            <span
-                                class="input-group-text font-monospace fs-5 pt-3 m-2 bg-success p-2 text-dark bg-opacity-25"
+                            <span class="input-group-text fs-5 pt-3 m-2 bg-success p-2 text-dark bg-opacity-25"
                                 id="addon-wrapping">NOMBRE</span>
                             <input type="text" class="form-control m-2" placeholder="Ingresa tu nombre"
                                 aria-label="Username" aria-describedby="addon-wrapping">
                         </div>
                         <div class="input-group flex-nowrap text-center">
-                            <span
-                                class="input-group-text font-monospace fs-5 pt-3 m-2 bg-success p-2 text-dark bg-opacity-25"
+                            <span class="input-group-text fs-5 pt-3 m-2 bg-success p-2 text-dark bg-opacity-25"
                                 id="addon-wrapping">APELLIDO</span>
                             <input type="text" class="form-control m-2" placeholder="Ingresa tu apellido"
                                 aria-label="Username" aria-describedby="addon-wrapping">
                         </div>
                         <div class="input-group flex-nowrap text-center">
-                            <span
-                                class="input-group-text font-monospace fs-5 pt-3 m-2 bg-success p-2 text-dark bg-opacity-25"
+                            <span class="input-group-text fs-5 pt-3 m-2 bg-success p-2 text-dark bg-opacity-25"
                                 id="addon-wrapping">E-MAIL</span>
                             <input type="text" class="form-control m-2" placeholder="Ingresa tu e-mail"
                                 aria-label="Username" aria-describedby="addon-wrapping">
@@ -127,9 +124,9 @@
                 <div class="form-floating">
                     <textarea class="form-control" placeholder="Dejanos aca tus consultas o comentarios:"
                         id="floatingTextarea2" style="height: 100px"></textarea>
-                    <label class="font-monospace fs-5" for="floatingTextarea2">CONSULTAS y/o
+                    <label class="fs-5" for="floatingTextarea2">CONSULTAS y/o
                         COMENTARIOS:</label>
-                    <button type="button" class="btn btn-dark font-monospace mt-4">ENVIAR</button>
+                    <button type="button" class="btn btn-dark mt-4">ENVIAR</button>
                 </div>
             </div>
             <!-- Fin consultas-->
@@ -158,7 +155,7 @@
                         referrerpolicy="no-referrer-when-downgrade" class="footerIframe"></iframe>
                 </div>
                 <div class="col-sm-12 col-md-4 p-3 text-center">
-                    <p class="text-white">SEGUINOS EN REDES</p>
+                    <h5 class="redesFooter">SEGUINOS EN REDES</h5>
                     <a class="footerIconInsta" href="#"><i class="iconRedes fa-brands fa-instagram  ms-3"></i></a>
                     <a class="footerIconFace" href="#"><i class="iconRedes fa-brands fa-facebook  ms-3"></i></a>
                 </div>
