Ajustes M.Queries y SEO

--- a/pages/insumos.html
+++ b/pages/insumos.html
@@ -166,7 +166,7 @@
             <h3 class="fs-3 bg-success p-2 text-dark bg-opacity-25">MEDIOS DE PAGO</h3>
             <p class="textoInsumos">Todos los medios habilitados</p>
             <h3 class="fs-3 bg-success p-2 text-dark bg-opacity-25">CAMBIOS / DEVOLUCIONES</h3>
-            <p class="textoInsumos">Tenes hasta 10 dias habiles a partir de la fecha de compra</p>
+            <p class="textoInsumos me-3 ms-3">Tenes hasta 10 dias habiles a partir de la fecha de compra</p>
         </div>
         <!-- Fin Condiciones -->
     </main>
